@@ -8,6 +8,7 @@ import static com.jayway.restassured.RestAssured.get;
 import static com.jayway.restassured.RestAssured.given;
 import static com.jayway.restassured.config.RestAssuredConfig.newConfig;
 import static com.jayway.restassured.config.XmlConfig.xmlConfig;
+import static com.jayway.restassured.path.xml.config.XmlPathConfig.xmlPathConfig;
 import static org.hamcrest.Matchers.equalTo;
 import static org.junit.Assert.assertThat;
 
@@ -33,5 +34,14 @@ public class NamespaceResponseParsingITest extends WithJetty {
         assertThat(xmlPath.getString("bar.text()"), equalTo("sudo make me a sandwich!"));
         assertThat(xmlPath.getString(":bar.text()"), equalTo("sudo make me a sandwich!"));
         assertThat(xmlPath.getString("ns:bar.text()"), equalTo("sudo make me a sandwich!"));
+    }
+
+    @Test public void
+    takes_namespaces_into_when_passing_xml_path_config_to_xml_path_method_in_response_object() {
+        final XmlPath xmlPath = get("/namespace-example").xmlPath(xmlPathConfig().with().declaredNamespace("ns", "http://localhost/"));
+
+        assertThat(xmlPath.getString("bar.text()"), equalTo("sudo make me a sandwich!"));
+        assertThat(xmlPath.getString(":bar.text()"), equalTo("sudo "));
+        assertThat(xmlPath.getString("ns:bar.text()"), equalTo("make me a sandwich!"));
     }
 }
