@@ -72,6 +72,8 @@ Change log next version
   (issue 39)
 * XmlPath returned from REST Assured Response now takes features, namespaces, charset etc into account.
 * XmlPathConfig supports declaring namespaces which means that XmlPath is now namespace aware if needed.
+* Added ability to supply an XmlPathConfig instance when using the xmlPath() method from a REST Assured Response object. For example :
+      XmlPath xmlPath = get("/namespace-example").xmlPath(xmlPathConfig().with().declaredNamespace("ns", "http://localhost/"));
 
 Change log 1.8.1 (2013-06-07)
 -----------------------------
